etc/kubernetes/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simplilearn-phpinfo-route
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: simplilearn-phpinfo-svc
